scanner performance optimization