@@ -6,8 +6,8 @@ import com.neteye.persistence.entities.PortInfo.PortInfoPrimaryKey;
 import com.neteye.persistence.repositories.DeviceRepository;
 import com.neteye.persistence.repositories.PortInfoRepository;
 import com.neteye.utils.Identify;
-import com.neteye.utils.misc.IpAddress;
 import com.neteye.utils.enums.DefaultServerPortNumbers;
+import com.neteye.utils.misc.IpAddress;
 import com.neteye.utils.misc.ServiceInfo;
 import lombok.Setter;
 import lombok.extern.log4j.Log4j2;
@@ -19,23 +19,21 @@ import java.net.InetSocketAddress;
 import java.net.Socket;
 import java.net.UnknownHostException;
 import java.util.*;
-import java.util.concurrent.ExecutorService;
-import java.util.concurrent.Executors;
+import java.util.concurrent.ForkJoinPool;
 import java.util.concurrent.TimeUnit;
-import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.atomic.AtomicIntegerArray;
-import java.util.stream.Collectors;
+import java.util.concurrent.atomic.AtomicLong;
 
 @Component
 @Log4j2
 public class DeviceSearcher {
     private final DeviceRepository deviceRepository;
     private final PortInfoRepository portInfoRepository;
-    private IpAddress lastAddress = new IpAddress("224.0.0.0");
+
 
     @Setter
     private int numberOfThreads = 10000;
-    private AtomicInteger howManyThreadsLeft;
+    private AtomicLong howManyIpsLeft;
 
     @Autowired
     public DeviceSearcher(DeviceRepository deviceRepository, PortInfoRepository portInfoRepository) {
@@ -43,71 +41,60 @@ public class DeviceSearcher {
         this.portInfoRepository = portInfoRepository;
     }
 
+
+
     public void search(Map<String, String> searchProperties) throws InterruptedException {
-        long numbersOfIpsPerThread;
-        ExecutorService executorService;
+        IpAddress lastAddress;
+
+        List<IpAddress> ipAddresses = new ArrayList<>();
 
         AtomicIntegerArray firstAddress = new IpAddress(searchProperties.get("startingIP")).getAtomicIntegerArrayIP();
+        IpAddress firstAddressIp = new IpAddress(firstAddress);
         lastAddress = new IpAddress(searchProperties.get("endingIP"));
         log.info("Stated scanning with ip {}.{}.{}.{}", firstAddress.get(0), firstAddress.get(1), firstAddress.get(2), firstAddress.get(3));
 
         if (searchProperties.containsKey("numberOfThreads")) {
             this.setNumberOfThreads(Integer.parseInt(searchProperties.get("numberOfThreads")));
         }
-
-        numbersOfIpsPerThread = IpAddress.calculateHowManyIpsAreInRange(new IpAddress(firstAddress), lastAddress) / numberOfThreads;
-
-        if (numbersOfIpsPerThread == 0) {
-            numberOfThreads = (int) IpAddress.calculateHowManyIpsAreInRange(new IpAddress(firstAddress), lastAddress);
-            numbersOfIpsPerThread = 1;
+        howManyIpsLeft = new AtomicLong(IpAddress.calculateHowManyIpsAreInRange(new IpAddress(firstAddress), lastAddress));
+        ipAddresses.add(firstAddressIp);
+        for (long i = 0; i < IpAddress.calculateHowManyIpsAreInRange(new IpAddress(firstAddress), lastAddress); i++) {
+            IpAddress currentIpAddress = new IpAddress(firstAddressIp.increment().getAddress());
+            ipAddresses.add(new IpAddress(currentIpAddress.toString()));
         }
 
-        howManyThreadsLeft = new AtomicInteger(numberOfThreads);
-        executorService = Executors.newFixedThreadPool(numberOfThreads);
+        ForkJoinPool forkJoinPool = new ForkJoinPool(numberOfThreads);
+        forkJoinPool.submit(() ->
+                ipAddresses.parallelStream().forEach(this::checkIp)
+        );
 
-        long finalNumbersOfIpsPerThread = numbersOfIpsPerThread;
-
-        IpAddress tmpAddress;
-
-        for (int i = 0; i < numberOfThreads; i++) {
-            tmpAddress = IpAddress.addToIp(new IpAddress(firstAddress), numbersOfIpsPerThread * i);
-            IpAddress finalTmpAddress = tmpAddress;
-            executorService.submit(() -> scan(finalTmpAddress, IpAddress.addToIp(finalTmpAddress, finalNumbersOfIpsPerThread)));
-        }
-
-        executorService.shutdown();
-        while (!executorService.isTerminated()) {
+        while (howManyIpsLeft.get() > 0) {
             TimeUnit.SECONDS.sleep(10);
-            log.info(howManyThreadsLeft);
+            log.info(howManyIpsLeft);
         }
-        executorService.close();
+        forkJoinPool.close();
+
         log.info("Scanning ended");
 
     }
 
-    private void scan(IpAddress currentAddress, IpAddress localLastAddress){
-        InetAddress inetAddress;
-        while (currentAddress.isLesser(lastAddress) && currentAddress.isLesser(localLastAddress)) {
+    private void checkIp(IpAddress currentAddress){
             try {
-                inetAddress = currentAddress.getIP();
+                InetAddress inetAddress = currentAddress.getIP();
                 if(inetAddress.isReachable(700)) {
                     List<PortInfo> foundPorts = Arrays.stream(DefaultServerPortNumbers.values()).parallel()
                             .map(portNumber -> scanPort(currentAddress, portNumber))
                             .filter(Objects::nonNull)
-                            .collect(Collectors.toList());
+                            .toList();
                     if (!foundPorts.isEmpty()) {
                         saveToDb(currentAddress, foundPorts);
                     }
                 }
             }
             catch (Exception e) {
-                //there will be a lot of insignificant exceptions
                 log.error(e);
-            } finally {
-                currentAddress.increment();
             }
-        }
-        howManyThreadsLeft.decrementAndGet();
+        howManyIpsLeft.decrementAndGet();
     }
 
     private PortInfo scanPort(IpAddress ip, DefaultServerPortNumbers port) {
@@ -124,30 +111,9 @@ public class DeviceSearcher {
                 );
             }
         } catch (Exception e) {
+            log.error(e);
         }
         return null;
-    }
-
-    private List<PortInfo> lookForOpenPorts(IpAddress currentIp) {
-        List<PortInfo> foundPorts = new ArrayList<>();
-        for (DefaultServerPortNumbers portNumber : DefaultServerPortNumbers.values()) {
-            try(Socket socket = new Socket()) {
-                socket.connect(new InetSocketAddress(currentIp.getIP(), portNumber.getPortNumber()), 700);
-                if(socket.isConnected()) {
-                    ServiceInfo serviceInfo = new ServiceInfo(currentIp.getIP(), portNumber);
-                    serviceInfo = Identify.fetchPortInfo(serviceInfo);
-                    foundPorts.add(new PortInfo(
-                            new PortInfoPrimaryKey(currentIp.toString(), portNumber.getPortNumber()),
-                            serviceInfo.getInfo(),
-                            serviceInfo.getAppName(),
-                            serviceInfo.getVersion()
-                    ));
-                }
-            } catch (Exception e) {
-                //there will be a lot of insignificant exceptions
-            }
-        }
-        return foundPorts;
     }
 
     private void saveToDb(IpAddress ipAddress, List<PortInfo> portInfos) {
